# iytmr

./: .env.example  .gitignore  Cargo.toml  install.sh  prek.toml
.github/workflows/: rust.yml
locales/: en.yml  rpr.yml  ru.yml  tt_ru.yml  uk.yml
src/: cache.rs  consts.rs  downloader.rs  main.rs  parser.rs
src/bot/: mod.rs  types.rs
src/bot/handlers/: handle_callback_query.rs  handle_chosen_inline_result.rs  handle_command.rs  handle_edited_message.rs  handle_inline_query.rs  handle_text.rs  mod.rs
src/bot/resources/: help.html  start.html  stats.html
src/db/: mod.rs  models.rs
