[package]
name = "iytmr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
dotenvy = "0.15.7"
log = "0.4.29"
pretty_env_logger = "0.5.0"
redb = "3.1.1"
rmp = "0.8.15"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
teloxide = { version = "0.17.0", features = ["full"] }
tokio = { version = "1.50.0", features = ["full"] }
yt-dlp = { version = "2.7.0", features = ["cache-redb", "hickory-dns"] }
