[package]
name = "iytmr"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures = "0.3.32"
log = "0.4.29"
pretty_env_logger = "0.5.0"
rand = "0.10.0"
redb = "3.1.1"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["brotli", "deflate", "gzip", "multipart", "socks", "stream", "zstd"] }
rmp = "0.8.15"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
teloxide = { version = "0.17.0", features = ["full"] }
tokio = { version = "1.50.0", features = ["full"] }
url = "2.5.8"
walkdir = "2.5.0"
yt-dlp = { version = "2.7.0", features = ["cache-redb", "hickory-dns"] }

[profile.release]
strip = true
lto = true
