[package]
name = "iytmr"
version = "0.5.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
dotenvy = "0.15"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.5"
rand = "0.10"
rust-i18n = "3"
redb = "3.1"
regex = "1.12"
reqwest = { version = "0.13", features = ["brotli", "deflate", "gzip", "multipart", "socks", "stream", "zstd", "rustls", "hickory-dns"] }
rmp = "0.8"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
teloxide = { version = "0.17", features = ["full"] }
tokio = { version = "1.50", features = ["full"] }
url = "2.5"
walkdir = "2.5"
yt-dlp = { version = "2.7.2", features = ["hickory-dns", "cache-memory", "cache-redb", "rustls"] }

# fix use of yanked lofty version
[patch.crates-io]
yt-dlp = { git = "https://github.com/lapismyt/yt-dlp" }

[profile.release]
lto = true
